--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1> Salve quebrada</h1>
+        <div><img src="img.jpeg" alt="ola amiguinhos" style="width:100%; max-width:960px"></div>
         <p> primeira quebrada da quebrada</p>
         <p> perna quebrada </p>
     </body>
