--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <div><img src="img.jpeg" alt="ola amiguinhos" style="width:100%; max-width:960px"></div>
         <p> primeira quebrada da quebrada</p>
         <p> perna quebrada </p>
+        <div><img src="paloma.jpeg" alt="bandindinho" style="width:100%;max-width:640px"></div>
     </body>
 </html>
