--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1> Salve quebrada</h1>
         <div><img src="img.jpeg" alt="ola amiguinhos" style="width:100%; max-width:960px"></div>
         <p> primeira quebrada da quebrada</p>
+        <p> essa linha aqui mostra o parangole funfando
+        </p>
         <p> perna quebrada </p>
         <div><img src="paloma.jpeg" alt="bandindinho" style="width:100%;max-width:640px"></div>
     </body>
